# synth

./: CMakeLists.txt  project.ps1
include/: synth.hpp
src/: main.cpp
